Fix message input hidden behind mobile browser toolbar

--- a/chatflow-client/src/features/home/HomePage.css
+++ b/chatflow-client/src/features/home/HomePage.css
@@ -1,6 +1,7 @@
 .home-wrapper {
   display: flex;
   height: 100vh;
+  height: 100dvh;
   overflow: hidden;
 }
 
